The PDF context menu should not be created in the WebContent process. https://bugs.webkit.org/show_bug.cgi?id=185401

Reviewed by Tim Horton.

Send a sync IPC message from the WebContent process to the UI process with the necessary context
menu information when the menu is requested. The NSMenu will then be created and shown in the
UI process. The reply will contain the selected menu item index.

* Shared/mac/PDFContextMenu.h: Added.
(WebKit::PDFContextMenuItem::encode const):
(WebKit::PDFContextMenuItem::decode):
(WebKit::PDFContextMenu::encode const):
(WebKit::PDFContextMenu::decode):
* UIProcess/WebPageProxy.h:
* UIProcess/WebPageProxy.messages.in:
* UIProcess/mac/WebPageProxyMac.mm:
(-[WKPDFMenuTarget menuItem]):
(-[WKPDFMenuTarget contextMenuAction:]):
(WebKit::WebPageProxy::showPDFContextMenu):
* WebKit.xcodeproj/project.pbxproj:
* WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::handleContextMenuEvent):


Canonical link: https://commits.webkit.org/200906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231510 268f45cc-cd09-0410-ab3c-d52691b4dbfc